--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,85 +1,37 @@
 variables:
-  buildConfiguration: 'Release'
-  poolName: 'rac-pool'
-  System.Debug: 'false'
-  solution: '**/*.sln'
-  buildPlatform: 'Any CPU'
-  coreInfrastructureName: 'rac-core-infra-demo'
   webAppName: 'rac-fileupload-web-$(Environment.Name)'
-  azFunctionName: 'rac-fileinflate-$(Environment.Name)'
-  azureSubscriptionName: 'DevTest'
   resourceGroupName: 'rac-demo-app'
+  sonarCloudExtraProperties: ''
+  coverletCoverageExclusions: ''
 
+# GitHub Repo that conatins build templates. Reference https://docs.microsoft.com/en-us/azure/devops/pipelines/process/templates?view=vsts#using-other-repositories
+resources:
+  repositories:
+  - repository: azureDevOpsTemplates
+    type: github
+    name: janisBerz/rac-azure-devops-templates
+    endpoint: 'janisBerz'
+
+trigger:
+  branches:
+    include:
+      - master
+      - refs/tags/v*
+pr:
+- master
+
+# Build step
 stages:
 - stage: Build
   jobs:
-  - job: Build
-    pool: '$(poolName)'
-    # workspace:
-    #   clean: all
-    steps:
-    - task: DotNetCoreCLI@2
-      displayName: 'DotNet Core Restore'
-      inputs:
-        command: restore
-        projects: '**/*.sln'
+  - template: jobs/dotNetCore.yml@azureDevOpsTemplates # Template reference
+    parameters:
+      webAppName: '$(webAppName)'
+      sonarCloudExtraProperties: $(sonarCloudExtraProperties)
+      coverletCoverageExclusions: $(coverletCoverageExclusions)
 
-    - task: DotNetCoreCLI@2
-      displayName: 'DotNet Core Build'
-      inputs:
-        command: build
-        projects: '**/*.sln'
-        arguments: '--configuration $(buildConfiguration) --no-restore'
+# Deployment steps
+- template: jobs/deployment.yml@azureDevOpsTemplates
+  parameters:
+    webAppName: '$(webAppName)'
 
-    - task: DotNetCoreCLI@2
-      displayName: 'DotNet Core Package WebApp'
-      inputs:
-        command: publish
-        arguments: '--configuration $(buildConfiguration) --output $(build.artifactstagingdirectory) --no-build'
-        projects: '**/*.sln'
-        zipAfterPublish: true
-
-    # - task: DotNetCoreCLI@2
-    #   displayName: 'DotNet Core Package Function'
-    #   inputs:
-    #     command: publish
-    #     arguments: '--configuration $(buildConfiguration) --output $(build.artifactstagingdirectory) --no-build'
-    #     projects: '**/*.sln'
-    #     publishWebProjects: false
-    #     zipAfterPublish: true
-    #     #modifyOutputPath: true
-
-    - task: PublishPipelineArtifact@1
-      displayName: 'Publish Artifacts'
-      inputs:
-        path: $(build.artifactstagingdirectory)
-        artifact: App
-
-- stage: Deployment_Dev
-  jobs:
-  - deployment: deployment_dev
-    displayName: 'Dev'
-    pool: '$(poolName)'
-    environment: 'dev'
-    # condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/heads/feature'))
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - template: deployment.yml
-
-# - stage: Deployment_Test
-#   jobs:
-#   - deployment: deployment_test
-#     displayName: 'Test'
-#     pool:
-#       vmImage: 'windows-2019'
-#     environment: 'test'
-#     condition: |
-#       and(succeeded(),
-#       eq(variables['Build.Reason'], 'PullRequest'))
-#     strategy:
-#       runOnce:
-#         deploy:
-#           steps:
-#           - template: deployment.yml
