Adding new unit tests (#3)

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ resources:
     type: github
     name: janisBerz/rac-azure-devops-templates
     endpoint: 'janisBerz'
+    ref: master # optional ref to pin to
 
 trigger:
   branches:
